// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`JournalSuggestion > renders with full journal 1`] = `
<DocumentFragment>
  <div>
    <strong>
      CJRL
    </strong>
  </div>
  <div
    class="f7"
  >
    <span>
      Cool Journal of Tests
    </span>
  </div>
</DocumentFragment>
`;

exports[`JournalSuggestion > renders with only short_title 1`] = `
<DocumentFragment>
  <div>
    <strong>
      CJRL
    </strong>
  </div>
  <div
    class="f7"
  >
    <span />
  </div>
</DocumentFragment>
`;
